// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FE Content Nested pages, alt templates, extra data 1`] = `
Array [
  "dist/json-page.html",
  "dist/nested/json-page.html",
  "dist/nested/more-nested/page.html",
  "dist/nested/more-nested/with-template.html",
  "dist/nested/page.html",
  "dist/scripts/app.4133c501.full.js",
  "dist/scripts/app.7f7c4ccf.js",
  "dist/scripts/app.7f7c4ccf.js.map",
  "dist/styles/main.--HASH--.css",
  "dist/styles/main.--HASH--.css.map",
  "dist/styles/main.--HASH--.full.css",
]
`;

exports[`FE Content Nested pages, alt templates, extra data 2`] = `
"<!DOCTYPE html>
<h1>Hello Hello Page</h1>
<div></div>"
`;

exports[`FE Content Nested pages, alt templates, extra data 3`] = `
"<!DOCTYPE html>
<h1>Hello Hello More</h1>
<div></div> Written on 2020-04-27T12:30:12.000Z by Jakub in ."
`;

exports[`FE Content Nested pages, alt templates, extra data 4`] = `
"<!DOCTYPE html>
<h1>Hello Hello Alt</h1>
<div>
  <p>This author writes things</p>
</div> Alternative template with post by Lubos"
`;

exports[`FE Content Nested pages, alt templates, extra data 5`] = `
"<!DOCTYPE html>
<h1>Hello </h1>
<div></div>"
`;

exports[`FE Content Nested pages, alt templates, extra data 6`] = `
"<!DOCTYPE html>
<h1>Hello JSON Title</h1>
<div></div> Alternative template with post by Jason"
`;
